// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Tests Sandbox/Selection Control/SwitchCheckbox Default 1`] = `
.c7 {
  margin-left: 8px;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  cursor: pointer;
  outline: 0;
}

.c0[aria-disabled='true'] {
  cursor: auto;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  z-index: 0;
}

.c4 {
  position: relative;
  box-sizing: border-box;
  width: 28px;
  height: 16px;
  border-radius: 16px;
  border: 2px solid transparent;
  background: #adadad;
  -webkit-transition: box-shadow 0.2s,background-color 0.2s;
  transition: box-shadow 0.2s,background-color 0.2s;
}

.c6 {
  position: absolute;
  display: block;
  top: 0;
  left: 0;
  width: 12px;
  height: 12px;
  background-color: #ffffff;
  border-radius: 50%;
  -webkit-transform: translateX(0);
  -ms-transform: translateX(0);
  transform: translateX(0);
  -webkit-transition: -webkit-transform 0.2s;
  -webkit-transition: transform 0.2s;
  transition: transform 0.2s;
}

.c2 {
  position: absolute;
  z-index: 1;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border-radius: 16px;
  opacity: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  cursor: pointer;
}

.c2:checked ~ .c3 {
  background-color: #0096fa;
}

.c2:checked ~ .c3 .c5 {
  -webkit-transform: translateX(12px);
  -ms-transform: translateX(12px);
  transform: translateX(12px);
}

.c2:disabled {
  cursor: auto;
}

.c2:disabled ~ .c3 {
  opacity: 0.32;
}

.c2:not(:disabled):focus ~ .c3 {
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

<div
  data-dark={false}
>
  <label
    aria-disabled={false}
    className="c0"
  >
    <span
      className="c1"
    >
      <input
        className="c2"
        defaultChecked={false}
        disabled={false}
        onChange={[Function]}
        type="checkbox"
      />
      <div
        className="c3 c4"
      >
        <div
          className="c5 c6"
        />
      </div>
    </span>
    <span
      className="c7"
    >
      label
    </span>
  </label>
</div>
`;

exports[`Storybook Tests Sandbox/Selection Control/SwitchCheckbox Disabled 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  cursor: pointer;
  outline: 0;
}

.c0[aria-disabled='true'] {
  cursor: auto;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  z-index: 0;
}

.c4 {
  position: relative;
  box-sizing: border-box;
  width: 28px;
  height: 16px;
  border-radius: 16px;
  border: 2px solid transparent;
  background: #adadad;
  -webkit-transition: box-shadow 0.2s,background-color 0.2s;
  transition: box-shadow 0.2s,background-color 0.2s;
}

.c6 {
  position: absolute;
  display: block;
  top: 0;
  left: 0;
  width: 12px;
  height: 12px;
  background-color: #ffffff;
  border-radius: 50%;
  -webkit-transform: translateX(0);
  -ms-transform: translateX(0);
  transform: translateX(0);
  -webkit-transition: -webkit-transform 0.2s;
  -webkit-transition: transform 0.2s;
  transition: transform 0.2s;
}

.c2 {
  position: absolute;
  z-index: 1;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border-radius: 16px;
  opacity: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  cursor: pointer;
}

.c2:checked ~ .c3 {
  background-color: #0096fa;
}

.c2:checked ~ .c3 .c5 {
  -webkit-transform: translateX(12px);
  -ms-transform: translateX(12px);
  transform: translateX(12px);
}

.c2:disabled {
  cursor: auto;
}

.c2:disabled ~ .c3 {
  opacity: 0.32;
}

.c2:not(:disabled):focus ~ .c3 {
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

<div
  data-dark={false}
>
  <label
    aria-disabled={true}
    className="c0"
  >
    <span
      className="c1"
    >
      <input
        checked={true}
        className="c2"
        disabled={true}
        type="checkbox"
      />
      <div
        className="c3 c4"
      >
        <div
          className="c5 c6"
        />
      </div>
    </span>
  </label>
</div>
`;

exports[`Storybook Tests Sandbox/Selection Control/SwitchCheckbox Off 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  cursor: pointer;
  outline: 0;
}

.c0[aria-disabled='true'] {
  cursor: auto;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  z-index: 0;
}

.c4 {
  position: relative;
  box-sizing: border-box;
  width: 28px;
  height: 16px;
  border-radius: 16px;
  border: 2px solid transparent;
  background: #adadad;
  -webkit-transition: box-shadow 0.2s,background-color 0.2s;
  transition: box-shadow 0.2s,background-color 0.2s;
}

.c6 {
  position: absolute;
  display: block;
  top: 0;
  left: 0;
  width: 12px;
  height: 12px;
  background-color: #ffffff;
  border-radius: 50%;
  -webkit-transform: translateX(0);
  -ms-transform: translateX(0);
  transform: translateX(0);
  -webkit-transition: -webkit-transform 0.2s;
  -webkit-transition: transform 0.2s;
  transition: transform 0.2s;
}

.c2 {
  position: absolute;
  z-index: 1;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border-radius: 16px;
  opacity: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  cursor: pointer;
}

.c2:checked ~ .c3 {
  background-color: #0096fa;
}

.c2:checked ~ .c3 .c5 {
  -webkit-transform: translateX(12px);
  -ms-transform: translateX(12px);
  transform: translateX(12px);
}

.c2:disabled {
  cursor: auto;
}

.c2:disabled ~ .c3 {
  opacity: 0.32;
}

.c2:not(:disabled):focus ~ .c3 {
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

<div
  data-dark={false}
>
  <label
    className="c0"
  >
    <span
      className="c1"
    >
      <input
        checked={false}
        className="c2"
        type="checkbox"
      />
      <div
        className="c3 c4"
      >
        <div
          className="c5 c6"
        />
      </div>
    </span>
  </label>
</div>
`;

exports[`Storybook Tests Sandbox/Selection Control/SwitchCheckbox On 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  cursor: pointer;
  outline: 0;
}

.c0[aria-disabled='true'] {
  cursor: auto;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  z-index: 0;
}

.c4 {
  position: relative;
  box-sizing: border-box;
  width: 28px;
  height: 16px;
  border-radius: 16px;
  border: 2px solid transparent;
  background: #adadad;
  -webkit-transition: box-shadow 0.2s,background-color 0.2s;
  transition: box-shadow 0.2s,background-color 0.2s;
}

.c6 {
  position: absolute;
  display: block;
  top: 0;
  left: 0;
  width: 12px;
  height: 12px;
  background-color: #ffffff;
  border-radius: 50%;
  -webkit-transform: translateX(0);
  -ms-transform: translateX(0);
  transform: translateX(0);
  -webkit-transition: -webkit-transform 0.2s;
  -webkit-transition: transform 0.2s;
  transition: transform 0.2s;
}

.c2 {
  position: absolute;
  z-index: 1;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border-radius: 16px;
  opacity: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  cursor: pointer;
}

.c2:checked ~ .c3 {
  background-color: #0096fa;
}

.c2:checked ~ .c3 .c5 {
  -webkit-transform: translateX(12px);
  -ms-transform: translateX(12px);
  transform: translateX(12px);
}

.c2:disabled {
  cursor: auto;
}

.c2:disabled ~ .c3 {
  opacity: 0.32;
}

.c2:not(:disabled):focus ~ .c3 {
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

<div
  data-dark={false}
>
  <label
    className="c0"
  >
    <span
      className="c1"
    >
      <input
        checked={true}
        className="c2"
        type="checkbox"
      />
      <div
        className="c3 c4"
      >
        <div
          className="c5 c6"
        />
      </div>
    </span>
  </label>
</div>
`;
